Added route design doc to docs
